syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/marinaaaniram/go-chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(google.protobuf.Empty) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc ConnectChat (ConnectChatRequest) returns (stream Message);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message Chat {
  int64 id = 1;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message Message {
  string username = 1;
  string text = 2;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message SendMessageRequest {
  int64 chat_id = 1;
  Message message = 2;
}

message ConnectChatRequest {
  int64 chat_id = 1;
  string username = 2;
}