syntax = "proto3";

package message_v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/marinaaaniram/go-chat-server/pkg/message_v1;message_v1";

service MessageV1 {
  rpc Send(SendRequest) returns (google.protobuf.Empty);
}

message SendRequest {
  int64 chat_id = 1;
  string sent_by = 2;
  string text = 3;
}